--- a/pages/docs/other/third-party.mdx
+++ b/pages/docs/other/third-party.mdx
@@ -1,15 +1,48 @@
+import GitHubIcon from '@mui/icons-material/GitHub'
+import Image from 'next/image'
+
 # Third Party
 
-While not officially supported by the core maintainers at Unownhash we highly recommend them:
+The following services are recommended and compatible with Unownhash:
 
-### [ReactMap](https://github.com/WatWowMap/ReactMap)
+## ReactMap
+
+<Image
+  src="https://user-images.githubusercontent.com/58572875/167069223-745a139d-f485-45e3-a25c-93ec4d09779c.png"
+  alt="ReactMap logo"
+  width={250}
+  height={250}
+/>
 
 A frontend map written in React. Extremely customizable to meet anyone's needs.
 
-### [PoracleJS](https://github.com/KartulUdus/PoracleJS)
+<GitHubIcon /> [Source](https://github.com/WatWowMap/ReactMap) | 📄
+[Docs](https://github.com/WatWowMap/ReactMap/wiki)
+
+## PoracleJS
+
+<Image
+  src="https://raw.githubusercontent.com/KartulUdus/PoracleJS/images/starchy.svg"
+  alt="PoracleJS logo"
+  width={250}
+  height={250}
+/>
 
 A bot that allows for configuration of Discord or Telegram alerts.
 
-### [Koji](https://github.com/TurtIeSocks/Koji/)
+<GitHubIcon /> [Source](https://github.com/KartulUdus/PoracleJS) | 📄
+[Docs](https://muckelba.github.io/poracleWiki)
+
+## Koji
+
+<Image
+  src="https://raw.githubusercontent.com/TurtIeSocks/Koji/main/client/public/favicon.png"
+  alt="Koji logo"
+  width={250}
+  height={250}
+/>
 
 A powerful route manager written in React & Rust. Still early phase but initial configuration and generation of routes is functional.
+
+<GitHubIcon /> [Source](https://github.com/TurtIeSocks/Koji) | 📄
+[Docs](https://koji.vercel.app)
