--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,3 +1,37 @@
+import { Callout } from "nextra-theme-docs";
+
 # Welcome to Unownhash!
 
-We are a passionate group of developers working on a mapping project for Pokémon Go. The project is in the **alpha** so expect some roughness on getting started. This also means we are **not feature complete** and many of the current features are only partially implemented.
+<Callout type="warning" emoji="⚠️">
+  We are still in development stage as such there might be bugs and some
+  features are **missing**.
+</Callout>
+
+We are a passionate group of developers working on a mapping project for Pokémon Go. We aren't finished yet but wanted to open things up to start getting feedback from the community!
+
+## What is this?
+
+- **Golbat** - is our data processor. It's primary purpose is to listen for events, format them into something useful, store to database, and send webhooks to external services.
+- **Flygon** - is our device handler. Devices will reach out to this service to grab jobs, accounts, and routes.
+- **Flygon-Admin** - this is our web frontend to manage the Flygon service.
+
+## Features
+
+Extremely customizable and highly optimized processing of game data. The services are written in the Go programming language which provides a great developer experience, excellent concurrency, great memory management, efficient & fast HTTP handling, and more. Additionally our design is using micro-services which allows for large flexibility, if you need to split services between multiple servers we have you covered.
+
+**Data processing**
+
+- Advanced Ditto detection
+- Detailed statistics
+- Gym
+- In Memory Pokemon Cache
+- Invasions
+- Pokemon
+- Pokestop
+- PVP calculation
+- Quest
+- Webhook
+
+## Still interested?
+
+Head over to the [Documentation](./docs) to learn more.
