fix: Include 3rd party images in repo

--- a/pages/docs/other/third-party.mdx
+++ b/pages/docs/other/third-party.mdx
@@ -8,7 +8,7 @@ The following services are recommended and compatible with Unownhash:
 ## ReactMap
 
 <Image
-  src="https://user-images.githubusercontent.com/58572875/167069223-745a139d-f485-45e3-a25c-93ec4d09779c.png"
+  src="/3rdparty/reactmap.png"
   alt="ReactMap logo"
   width={250}
   height={250}
@@ -22,7 +22,7 @@ A frontend map written in React. Extremely customizable to meet anyone's needs.
 ## PoracleJS
 
 <Image
-  src="https://raw.githubusercontent.com/KartulUdus/PoracleJS/images/starchy.svg"
+  src="/3rdparty/poraclejs.svg"
   alt="PoracleJS logo"
   width={250}
   height={250}
@@ -35,12 +35,7 @@ A bot that allows for configuration of Discord or Telegram alerts.
 
 ## Koji
 
-<Image
-  src="https://raw.githubusercontent.com/TurtIeSocks/Koji/main/client/public/favicon.png"
-  alt="Koji logo"
-  width={250}
-  height={250}
-/>
+<Image src="/3rdparty/koji.png" alt="Koji logo" width={250} height={250} />
 
 A powerful route manager written in React & Rust. Still early phase but initial configuration and generation of routes is functional.
 
