--- a/pages/docs/other/third-party.mdx
+++ b/pages/docs/other/third-party.mdx
@@ -8,7 +8,7 @@ The following services are recommended and compatible with Unownhash:
 ## ReactMap
 
 <Image
-  src="/3rdparty/reactmap.png"
+  src="/images/reactmap.png"
   alt="ReactMap logo"
   width={250}
   height={250}
@@ -22,7 +22,7 @@ A frontend map written in React. Extremely customizable to meet anyone's needs.
 ## PoracleJS
 
 <Image
-  src="/3rdparty/poraclejs.svg"
+  src="/images/poraclejs.svg"
   alt="PoracleJS logo"
   width={250}
   height={250}
@@ -35,7 +35,7 @@ A bot that allows for configuration of Discord or Telegram alerts.
 
 ## Koji
 
-<Image src="/3rdparty/koji.png" alt="Koji logo" width={250} height={250} />
+<Image src="/images/koji.png" alt="Koji logo" width={250} height={250} />
 
 A powerful route manager written in React & Rust. Still early phase but initial configuration and generation of routes is functional.
 
