docs: Standard install + reorg

--- a/pages/docs/flygon.mdx
+++ b/pages/docs/flygon.mdx
@@ -3,7 +3,7 @@ import { Callout } from "nextra-theme-docs";
 # [Flygon](https://github.com/UnownHash/Flygon)
 
 <Callout type="warning" emoji="⚠️">
-  This service is currently private!
+  Flygon is not public yet!
 </Callout>
 
 **Flygon** is our device controller. It receives HTTP requests from Man in the Middle (MITM) clients that are compatible with RealDeviceMap (RDM) and instructs clients what to do. In short it tells the game which account to login with, where to go, and what action to take. Additionally, it can forward data requests to **Golbat** for data processing.
