--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -17,12 +17,12 @@ We are a passionate group of developers working on a mapping project for Pokémo
 
 ## Features
 
-Extremely customizable and highly optimized processing of game data. The services are written in the Go programming language which provides a great developer experience, excellent concurrency, great memory management, efficient & fast HTTP handling, and more. Additionally our design is using micro-services which allows for large flexibility, if you need to split services between multiple servers we have you covered.
+Extremely customizable and highly optimized processing of game data. The services are written in the Go programming language which provides a great developer experience, excellent concurrency, great memory management, efficient, fast HTTP handling, and more. Additionally our design is using micro-services which allows for large flexibility, if you need to split services between multiple servers we have you covered.
 
-**Data processing**
+Some of our highlighted features:
 
 - Advanced Ditto detection
-- Detailed statistics
+- Advanced IV, shiny, hundo, & nundo statistics
 - Gym
 - In Memory Pokemon Cache
 - Invasions
@@ -31,6 +31,7 @@ Extremely customizable and highly optimized processing of game data. The service
 - PVP calculation
 - Quest
 - Webhook
+- and more!
 
 ## Still interested?
 
