--- a/pages/docs/setup/docker.mdx
+++ b/pages/docs/setup/docker.mdx
@@ -10,133 +10,157 @@ import { Callout } from 'nextra-theme-docs'
 
 1. Setup a database server
 
-   Please see [Database Setup](/docs/other/database) if you need help with this step.
+    Please see [Database Setup](/docs/other/database) if you need help with this step.
 
-   - MariaDB 10.6 or higher (recommended)
-   - MySQL 8 or higher
+    - MariaDB 10.6 or higher (recommended)
+    - MySQL 8 or higher
 
 1. Download the docker-compose example file
 
-   ```yml filename="docker-compose.yml"
-   version: "3.7"
-   services:
-     flygon:
-         image: ghcr.io/unownhash/flygon:main
-         container_name: flygon
-         restart: unless-stopped
-         volumes:
-         - type: bind
-             source: ${PWD}/flygon_config.toml
-             target: /flygon/config.toml
-         # optional volumes if you want to have access to logs
-         # comment if not needed
-         - type: bind
-             source: ${PWD}/logs
-             target: /flygon/logs
-         ports:
-         - "9002:9002"
-     golbat:
-         image: ghcr.io/unownhash/golbat:main
-         container_name: golbat
-         restart: unless-stopped
-         volumes:
-         - type: bind
-             source: ${PWD}/golbat_config.toml
-             target: /golbat/config.toml
-         # optional volumes if you want to have access to logs and persist cache
-         # comment if not needed
-         - type: bind
-             source: ${PWD}/cache
-             target: /golbat/cache
-         - type: bind
-             source: ${PWD}/logs
-             target: /golbat/logs
-         ports:
-         - "9001:9001"
-     admin:
-         image: ghcr.io/unownhash/flygon-admin:main
-         container_name: admin
-         restart: unless-stopped
-         environment:
-         ADMIN_GENERAL_USERNAME: admin
-         ADMIN_GENERAL_PASSWORD: password
+    <Callout type="info" emoji="💡">
+        If you want logs and cache files outside of docker via the mount paths make sure to create those directories.
 
-         ADMIN_FLYGON_API_ENDPOINT: http://flygon:9002
-         ADMIN_FLYGON_API_SECRET: secret
+    ```sh
+    mkdir logs cache
+    ```
 
-         ADMIN_GOLBAT_API_ENDPOINT: http://golbat:9001
-         ADMIN_GOLBAT_API_SECRET: secret
-         ports:
-         - "9003:9003"
+    </Callout>
 
-   ```
+    ```yml filename="docker-compose.yml"
+    version: "3.7"
+    services:
+      flygon:
+          image: ghcr.io/unownhash/flygon:main
+          container_name: flygon
+          restart: unless-stopped
+          volumes:
+            - type: bind
+                source: ${PWD}/flygon_config.toml
+                target: /flygon/config.toml
+          # Optional volumes if you want to have access to logs
+          #  - type: bind
+          #      source: ${PWD}/logs
+          #      target: /flygon/logs
+          ports:
+            - "9002:9002" # change left one for external port
+          # Optional: Might be required if your database is also hosted in docker
+          #network_mode: "host"
+          #extra_hosts:
+          #  - "host.docker.internal:host-gateway"
+      golbat:
+          image: ghcr.io/unownhash/golbat:main
+          container_name: golbat
+          restart: unless-stopped
+          volumes:
+            - type: bind
+              source: ${PWD}/golbat_config.toml
+              target: /golbat/config.toml
+          # Optional volumes if you want to have access to logs and persist cache
+          #  - type: bind
+          #    source: ${PWD}/cache
+          #    target: /golbat/cache
+          #  - type: bind
+          #    source: ${PWD}/logs
+          #    target: /golbat/logs
+          ports:
+            - "9001:9001" # change left one for external port
+          # Optional: Might be required if your database is also hosted in docker
+          #network_mode: "host"
+          #extra_hosts:
+          #  - "host.docker.internal:host-gateway"
+      admin:
+          image: ghcr.io/unownhash/flygon-admin:main
+          container_name: admin
+          restart: unless-stopped
+          environment:
+            ADMIN_GENERAL_USERNAME: admin
+            ADMIN_GENERAL_PASSWORD: password
+
+            ADMIN_FLYGON_API_ENDPOINT: http://flygon:9002
+            ADMIN_FLYGON_API_SECRET: secret
+
+            ADMIN_GOLBAT_API_ENDPOINT: http://golbat:9001
+            ADMIN_GOLBAT_API_SECRET: secret
+          ports:
+            - "9003:9003" # change left one for external port
+
+    ```
 
 1. Download Flygon config file
 
-   ```sh
-   wget -O flygon_config.toml https://raw.githubusercontent.com/UnownHash/Flygon/main/config.toml.example
-   ```
+    ```sh
+    wget -O flygon_config.toml https://raw.githubusercontent.com/UnownHash/Flygon/main/config.toml.example
+    ```
 
 1. Download Golbat config file
 
-   ```sh
-   wget -O golbat_config.toml https://raw.githubusercontent.com/UnownHash/Golbat/main/config.toml.example
-   ```
+    ```sh
+    wget -O golbat_config.toml https://raw.githubusercontent.com/UnownHash/Golbat/main/config.toml.example
+    ```
 
 1. Modify your two config files and docker-compose files
 
-   Make sure to update the highlighted lines from our snippets into your config files.
+    Make sure to update the highlighted lines from our snippets into your config files.
 
-   > **Note**: this doesn't cover 100% of the configuration just the basics to get you started. We **highly recommend** setting a `raw_bearer` secret if these services are accessible from the public internet.
+    > **Note**: this doesn't cover 100% of the configuration just the basics to get you started. We **highly recommend** setting a `raw_bearer` secret if these services are accessible from the public internet.
 
-   ```toml filename="flygon_config.toml" {2,4,7-11}
-   [processors]
-   golbat_endpoint = "http://golbat:9001"
-   golbat_raw_bearer = ""
-   golbat_api_secret = ""
+    ```toml filename="flygon_config.toml" {2,4,7-11}
+    [processors]
+    golbat_endpoint = "http://golbat:9001"
+    golbat_raw_bearer = ""
+    golbat_api_secret = ""
 
-   [db]
-   host = "0.0.0.0"
-   port = 3306
-   user = ""
-   password = ""
-   name = "flygon"
-   ```
+    [db]
+    host = "0.0.0.0"
+    port = 3306
+    user = ""
+    password = ""
+    name = "flygon"
+    ```
 
-   ```toml filename="golbat_config.toml" {1, 4-7}
-   api_secret = "golbat"   # Golbat secret required on api calls (blank for none)
+    ```toml filename="golbat_config.toml" {1, 4-7}
+    api_secret = "golbat"   # Golbat secret required on api calls (blank for none)
 
-   [database]
-   user = ""
-   password = ""
-   address = "127.0.0.1:3306"
-   db = ""
-   ```
+    [database]
+    user = ""
+    password = ""
+    address = "127.0.0.1:3306"
+    db = ""
+    ```
 
-   ```yml filename="docker-compose.yml" {7,8,11,14}
-   ...
-   admin:
-     image: ghcr.io/unownhash/flygon-admin:main
-     container_name: admin
-     restart: unless-stopped
-     environment:
-       ADMIN_GENERAL_USERNAME: admin
-       ADMIN_GENERAL_PASSWORD: password
-
-       ADMIN_FLYGON_API_ENDPOINT: http://flygon:9002
-       ADMIN_FLYGON_API_SECRET: secret
-
-       ADMIN_GOLBAT_API_ENDPOINT: http://golbat:9001
-       ADMIN_GOLBAT_API_SECRET: secret
+    ```yml filename="docker-compose.yml" {7,8,11,14}
     ...
-   ```
+    admin:
+        image: ghcr.io/unownhash/flygon-admin:main
+        container_name: admin
+        restart: unless-stopped
+        environment:
+        ADMIN_GENERAL_USERNAME: admin
+        ADMIN_GENERAL_PASSWORD: password
+
+        ADMIN_FLYGON_API_ENDPOINT: http://flygon:9002
+        ADMIN_FLYGON_API_SECRET: secret
+
+        ADMIN_GOLBAT_API_ENDPOINT: http://golbat:9001
+        ADMIN_GOLBAT_API_SECRET: secret
+        ...
+    ```
 
 1. Start the services
 
-   ```sh
-   docker-compose pull
-   docker-compose up -d
-   ```
+    <Callout type="info" emoji="💡">
+        If this is the first time using GitHub container registry you will need to login. When prompted use your personal access token **not** password. [More info](https://docs.github.com/en/packages/working-with-a-github-packages-registry/working-with-the-container-registry#authenticating-with-a-personal-access-token-classic)
+
+    ```sh
+    docker login ghcr.io -u GITHUB_USERNAME
+    ```
+
+    </Callout>
+
+    ```sh
+    docker-compose pull
+    docker-compose up -d
+    ```
 
 ## Modify MITM client
 
