docs: Database notes + standard info emoji Callout

--- a/pages/docs/help.mdx
+++ b/pages/docs/help.mdx
@@ -6,7 +6,7 @@ If you are running into a problem, we encourage you to reach out in one of the `
 
 ## Found a bug
 
-    <Callout type="info" emoji="💡">
+    <Callout type="info" emoji="ℹ️">
     Please update to the latest version if you aren't already. This is the best way to make sure you have all the latest fixes.
     </Callout>
 
