--- a/pages/docs/setup/standard.mdx
+++ b/pages/docs/setup/standard.mdx
@@ -13,6 +13,7 @@ import { Callout } from 'nextra-theme-docs'
 - [Yarn 1.22](https://classic.yarnpkg.com/lang/en/docs/install)
 - [Git](https://git-scm.com/downloads) _(`git` might be pre-installed)_
 - [PM2](https://pm2.io/docs/runtime/guide/installation/) `yarn global add pm2`
+- Compatible Database - See [Database Setup](/docs/other/database)
 
 ## Install Golbat
 
