fix: Remove @mui/icons-material
It's a great library but it increases our CI build time, stores an extra 128 MB of deps on disk, and it's unlikely we will ever use that many icons in this repo. Adding the few we do care about isn't that much work.

Minor rework to the Third Party page to add in line css that was removed by this package removal.

--- a/pages/docs/other/third-party.mdx
+++ b/pages/docs/other/third-party.mdx
@@ -1,4 +1,4 @@
-import GitHubIcon from '@mui/icons-material/GitHub'
+import { SourceLink } from '../../../components/SourceLink'
 import Image from 'next/image'
 
 # Third Party
@@ -16,8 +16,10 @@ The following services are recommended and compatible with Unownhash:
 
 A frontend map written in React. Extremely customizable to meet anyone's needs.
 
-<GitHubIcon /> [Source](https://github.com/WatWowMap/ReactMap) | 📄
-[Docs](https://github.com/WatWowMap/ReactMap/wiki)
+<SourceLink
+  git_href="https://github.com/WatWowMap/ReactMap"
+  docs_href="https://github.com/WatWowMap/ReactMap/wiki"
+/>
 
 ## PoracleJS
 
@@ -30,8 +32,10 @@ A frontend map written in React. Extremely customizable to meet anyone's needs.
 
 A bot that allows for configuration of Discord or Telegram alerts.
 
-<GitHubIcon /> [Source](https://github.com/KartulUdus/PoracleJS) | 📄
-[Docs](https://muckelba.github.io/poracleWiki)
+<SourceLink
+  git_href="https://github.com/KartulUdus/PoracleJS"
+  docs_href="https://muckelba.github.io/poracleWiki"
+/>
 
 ## Koji
 
@@ -39,5 +43,8 @@ A bot that allows for configuration of Discord or Telegram alerts.
 
 A powerful route manager written in React & Rust. Still early phase but initial configuration and generation of routes is functional.
 
-<GitHubIcon /> [Source](https://github.com/TurtIeSocks/Koji) | 📄
-[Docs](https://koji.vercel.app)
+
+<SourceLink
+  git_href="https://github.com/TurtIeSocks/Koji"
+  docs_href="https://koji.vercel.app"
+/>
