docs: Better update instructions for Standard/pm2

--- a/pages/docs/setup/docker.mdx
+++ b/pages/docs/setup/docker.mdx
@@ -6,7 +6,7 @@ import { Callout } from 'nextra-theme-docs'
   Some of these steps will fail since Flygon is not public yet!
 </Callout>
 
-## Pre Requisites
+## Prerequisites
 
 - [Docker](https://docs.docker.com/engine/install/)
 - Compatible Database - See [Database Setup](/docs/other/database)
