--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -9,6 +9,10 @@ import { Callout } from "nextra-theme-docs";
 
 We are a passionate group of developers working on a mapping project for Pokémon Go. We aren't finished yet but wanted to open things up to start getting feedback from the community!
 
+## Why did you make this?
+
+We wanted to try something new and the early results have been promising. The current tools in this space have been around for a few years. As such they are stable but increasingly difficult to add new features. This gives us a chance to re-think legacy ideas, rebuild from the ground up, and along the way build a better user experience for all involved.
+
 ## What is this?
 
 - **Golbat** - is our data processor. It's primary purpose is to listen for events, format them into something useful, store to database, and send webhooks to external services.
@@ -17,7 +21,7 @@ We are a passionate group of developers working on a mapping project for Pokémo
 
 ## Features
 
-Extremely customizable and highly optimized processing of game data. The services are written in the Go programming language which provides a great developer experience, excellent concurrency, great memory management, efficient, fast HTTP handling, and more. Additionally our design is using micro-services which allows for large flexibility, if you need to split services between multiple servers we have you covered.
+Extremely customizable and highly optimized processing of game data. The services are written in the Go programming language which provides a great developer experience, excellent concurrency, great memory management, fast HTTP handling, and more. Additionally our design is using micro-services which allows for large flexibility, if you need to split services between multiple servers we have you covered.
 
 Some of our highlighted features:
 
