--- a/pages/docs/setup/docker.mdx
+++ b/pages/docs/setup/docker.mdx
@@ -159,3 +159,12 @@ import { Callout } from 'nextra-theme-docs'
     docker-compose pull
     docker-compose up -d
     ```
+
+## Updating
+
+Updating with docker is straight forward
+
+```sh
+docker-compose pull
+docker-compose up -d
+```
