docs: Grammer after sleep is best

--- a/pages/docs/help.mdx
+++ b/pages/docs/help.mdx
@@ -2,15 +2,15 @@ import { Callout } from 'nextra-theme-docs'
 
 # Getting Help
 
-If you are running into a problem, we encourage you to reach out in one of the `#help` channels in discord. This allows the larger community to answer questions instead of throwing the burden of support on our maintainers.
+If you are facing a problem, we encourage you to reach out in one of our Discord `#help` channels; the invite link is below. This workflow allows the larger community to answer questions instead of throwing the burden of support on our maintainers.
 
 ## Found a bug
 
     <Callout type="info" emoji="ℹ️">
-    Please update to the latest version if you aren't already. This is the best way to make sure you have all the latest fixes.
+    Before reporting a bug, please ensure you are running the latest version.
     </Callout>
 
-If your issue is still present, we encourage you to [open an issue](https://github.com/unownhash) on the correct GitHub project! Please be through, provide logs, and try to provide steps on how we can replicate the issue.
+If your issue is still present, we encourage you to [open an issue](https://github.com/unownhash) on the correct GitHub project! Please thoroughly describe, attach logs, and provide steps to replicate the issue.
 
 ## Discord
 
