--- a/pages/docs/other/third-party.mdx
+++ b/pages/docs/other/third-party.mdx
@@ -14,7 +14,7 @@ The following services are recommended and compatible with Unownhash:
   height={250}
 />
 
-A frontend map written in React. Extremely customizable to meet anyone's needs.
+ReactMap is a map written in React allowing users to find Pokemon based on information in your database.
 
 <SourceLink
   git_href="https://github.com/WatWowMap/ReactMap"
@@ -30,7 +30,7 @@ A frontend map written in React. Extremely customizable to meet anyone's needs.
   height={250}
 />
 
-A bot that allows for configuration of Discord or Telegram alerts.
+A bot that allows for the configuration of Discord or Telegram alerts.
 
 <SourceLink
   git_href="https://github.com/KartulUdus/PoracleJS"
@@ -41,7 +41,7 @@ A bot that allows for configuration of Discord or Telegram alerts.
 
 <Image src="/images/koji.png" alt="Koji logo" width={250} height={250} />
 
-A powerful route manager written in React & Rust. Still early phase but initial configuration and generation of routes is functional.
+Koji is an automation tool that can streamline mapping new and existing areas as efficiently as possible. It includes a powerful route manager written in React & Rust.
 
 
 <SourceLink
