--- a/pages/docs/golbat/pvp.mdx
+++ b/pages/docs/golbat/pvp.mdx
@@ -2,9 +2,9 @@ import { SourceLink } from '../../../components/SourceLink'
 
 # PvP Calculation
 
-The Player vs. Player (PvP) calculation that Golbat uses is powered by [Gohbem](https://github.com/UnownHash/gohbem). This library was rewritten in Go by [lenisko](https://github.com/lenisko) from the original nodejs [Mygod/ohbem](https://github.com/Mygod/ohbem) project.
+The Player vs. Player (PvP) calculation that Golbat uses is powered by [Gohbem](https://github.com/UnownHash/gohbem). This library was rewritten in Go by [lenisko](https://github.com/lenisko) from the original NodeJS [Mygod/ohbem](https://github.com/Mygod/ohbem) project.
 
-If there are errors or feature enhancements around PvP calculation then it needs to be addressed in this library prior to being added to Golbat. Unless Niantic releases a new PvP league or modifies level caps this library is mostly a background artifact. There a few outstanding feature enhancements but the core project is functioning as intended.
+If there are errors or feature enhancements around PvP calculation, they must be addressed in this library before being added to Golbat. This library is mostly a background artifact unless Niantic releases a new PvP league or modifies level caps. There are a few outstanding feature enhancements, but the core project functions as intended.
 
 ---
 
