--- a/pages/docs/index.mdx
+++ b/pages/docs/index.mdx
@@ -1,6 +1,6 @@
 # Intro
 
-There are two install paths, Docker or Standard. Both options provide an easy and supported way to build your environment. Docker is the recommended option as it is a little easier to get started with the only downside being the _"docker abstraction layer"_. Standard setup is much better if you plan on developing or testing pull requests, just be warned it is a lengthier setup process. Additionally, Standard requires extra steps when updating the services.
+There are two install paths, Docker or Standard. Both options provide an easy and supported way to build your environment. Docker is recommended as it is a little easier to get started, with the only downside being the _"docker abstraction layer"_. Standard setup is better if you plan on developing or testing pull requests. Just be warned, setup is a lengthier process.
 
 - [Docker](/docs/setup/docker)
 - [Standard](/docs/setup/standard)
