docs: Switch to marketing name

--- a/pages/docs/other/third-party.mdx
+++ b/pages/docs/other/third-party.mdx
@@ -3,7 +3,7 @@ import Image from 'next/image'
 
 # Third Party
 
-The following services are recommended and compatible with Unownhash:
+The following services are recommended and compatible with Unown#:
 
 ## ReactMap
 
