--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,6 @@
 import { Callout } from "nextra-theme-docs";
 
-# Welcome to Unownhash!
+# Welcome to Unown#
 
 <Callout type="warning" emoji="⚠️">
   We are still in the development stage; there might be bugs, and some features are **missing**.
@@ -10,7 +10,7 @@ We are a passionate group of developers working on a mapping project for Pokémo
 
 ## Why did you make this?
 
-We wanted to try something new, and the early results have been promising. The current tools in this space have been around for a few years. As such, they are stable, but increasingly difficult to add new features. Unownhash allows us to re-think legacy ideas, rebuild from the ground up, and build a better user experience for all involved.
+We wanted to try something new, and the early results have been promising. The current tools in this space have been around for a few years. As such, they are stable, but increasingly difficult to add new features. Unown# allows us to re-think legacy ideas, rebuild from the ground up, and build a better user experience for all involved.
 
 ## What is this?
 
