docs: RDM RAW Forward

--- a/pages/docs/flygon/index.mdx
+++ b/pages/docs/flygon/index.mdx
@@ -17,5 +17,4 @@ Currently, **Flygon** includes a proof of concept Pokemon scan mode. Right now, 
 ## Supported MITM clients
 
 - [Atlas](https://pokemod.dev/) (Android)
-- GC (iOS - invite only)
-- GDS (iOS - invite only)
+- [Exeggcute/GC](https://jorgschulze73.github.io/gc-docs/) (iOS and Android)
